Fix dark mode selector as well

--- a/src/extra/normalize.css
+++ b/src/extra/normalize.css
@@ -3,7 +3,7 @@
 @import "normalize.src.css";
 
 @media (--OSdark) {
-  :where(textarea, select, input:not(button,button[type],input[type="button"],input[type="submit"],input[type="reset"])) {
+  :where(textarea, select, input:not([type="button"],[type="submit"],[type="reset"])) {
     background-color: hsl(210 11% 10%);
   }
 
